[gd_scene load_steps=5 format=3 uid="uid://kh8h3tgcfiy7"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_trvaf"]
[ext_resource type="Texture2D" uid="uid://cut2vx48a8ebb" path="res://images/mayuri.jpg" id="2_mft4k"]
[ext_resource type="Texture2D" uid="uid://fpamc68ox6kk" path="res://images/param.png" id="3_6jd0f"]
[ext_resource type="AudioStream" uid="uid://cykauti5tqg0m" path="res://audio/tuturu.wav" id="4_uwptn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_trvaf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.8
anchor_bottom = 16.2
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mft4k")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.8
anchor_bottom = 16.2
offset_left = 512.0
offset_top = 280.0
offset_right = -448.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2

[node name="CampagneButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Campagne"
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Train
"
alignment = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("3_6jd0f")
icon_alignment = 1
expand_icon = true

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Leaderboard"
alignment = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quitter"
alignment = 0

[node name="tuturu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_uwptn")
attenuation = 1e-05

[node name="username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 232.0
offset_right = 664.0
offset_bottom = 263.0

[connection signal="pressed" from="VBoxContainer/CampagneButton" to="." method="_on_campagne_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="text_changed" from="username" to="." method="_on_line_edit_text_changed"]
